# BaseUtils

./: Array.h  CMakeLists.txt  CMakeLists_old.txt  StyleCodes.h  formatting.h  formatting_Refactor.h  readme.md  test_main.cpp
cmake/: BaseUtilsConfig.cmake.in
include/: ColouredFormatting.h  FullFormatting.h  PrefixFormatting.h  SuffixFormatting.h
include/BaseUtils/: All.h  ColouredFormatting.h  FullFormatting.h  PrefixFormatting.h  SuffixFormatting.h
include/BaseUtils/types/: BaseVectors.h  Events.h  FixedString.h  SemiDynamicArray.h  old_Events.h
tests/: formatting_test.cpp  types_test.cpp
